--- a/MoqsAndFakes.CardGameSuite.Utilities/MoqsAndFakes.CardGameSuite.Utilities.csproj
+++ b/MoqsAndFakes.CardGameSuite.Utilities/MoqsAndFakes.CardGameSuite.Utilities.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
 
 </Project>
